--- a/FacebookFanpageApp/FacebookFanpageApp.csproj
+++ b/FacebookFanpageApp/FacebookFanpageApp.csproj
@@ -263,6 +263,8 @@
     <Content Include="Global.asax" />
     <Content Include="fbchannel.ashx" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
+    <Content Include="Images\fb-settings-de.png" />
+    <Content Include="Images\fb-settings.png" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -303,6 +305,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Home\Firstpage.cshtml" />
+    <Content Include="Views\Home\NoSignedRequest.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -341,7 +344,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>51588</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:53319/</IISUrl>
+          <IISUrl>http://localhost:53319/facebookApp/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
