--- a/FacebookFanpageApp/Web.config
+++ b/FacebookFanpageApp/Web.config
@@ -27,7 +27,7 @@
 		<add key="fb_scope" value="email,user_likes,user_photos,user_location,user_about_me" />
 	</appSettings>
 	<system.web>
-		<compilation debug="true" targetFramework="4.5" />
+		<compilation debug="false" targetFramework="4.5" />
 		<globalization culture="en-US" uiCulture="en-US"/>
 		<sessionState cookieless="UseUri" />
 		<httpRuntime targetFramework="4.5" />
