--- a/FacebookFanpageApp/FacebookFanpageApp.csproj
+++ b/FacebookFanpageApp/FacebookFanpageApp.csproj
@@ -308,6 +308,7 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Home\Firstpage.cshtml" />
     <Content Include="Views\Home\NoSignedRequest.cshtml" />
+    <Content Include="Views\Home\Offline.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
