--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,5 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+/FacebookFanpageApp/bin/FacebookFanpageApp.dll
+/FacebookFanpageApp/bin/FacebookFanpageApp.pdb
